# nvbbox2json

./: .gitignore  CMakeLists.txt  Makefile  README.md  gstnvobjmeta2json.c  gstnvobjmeta2json.h
